--- a/settings.ini.example
+++ b/settings.ini.example
@@ -2,7 +2,7 @@ NAME="X-SERVER"
 STATUS_URL="https://s.x.x/"
 GETIP_URL="https://"
 FREEMYIP=
-SSD1="/dev/sdb"
+SSD1="/dev/sda"
 SSD2="/dev/sdb"
 IPERF3_SERVER="ping.online.net"
 IPERF3_PORT_FILE="/tmp/iperf3_port"
