--- a/settings.ini.example
+++ b/settings.ini.example
@@ -2,8 +2,8 @@ NAME="X-SERVER"
 STATUS_URL="https://s.x.x/"
 GETIP_URL="https://"
 FREEMYIP=
-SSD1="/dev/sda"
-SSD2="/dev/sdb"
+SSD1="sda"
+SSD2="sdb"
 IPERF3_SERVER="ping.online.net"
 IPERF3_PORT_FILE="/tmp/iperf3_port"
 SPEEDTEST_URL="https:///speedtest.php"
